# flightctl

./: .gitignore  .gitmodules  Cargo.toml  build.rs
flightctl/: Cargo.toml
flightctl/src/: main.rs  manager.rs
include/: helper.h  shim.h
mav-test/: mavsdk.h  wrapper.h
mav-test/src/include/: fmavsdk.h
mavsdk/: Cargo.toml  build.rs
mavsdk/include/: helper.h  shim.h
mavsdk/src/: helper.cc  lib.rs
src/: app.rs  cli.rs  generate.rs  helper.cc  lib.rs  main.rs  manager.rs  run_mode.rs  shim.cc  ui.rs
src/include/: helper.h  shim.h
