[package]
name = "flightctl"
version = "0.1.0"
edition = "2021"

[lib]
name = "mavsdk"
path = "src/lib.rs"

[[bin]]
name = "flightctl"
path = "src/main.rs"

[dev-dependencies]
mockall = "0.11"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
cxx = "1.0"
futures = "0.3"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
cxx-build = "1.0"