[package]
name = "flightctl"
version = "0.1.0"
edition = "2021"

[lib]
name = "mavsdk"
path = "src/lib.rs"

[[bin]]
name = "flightctl"
path = "src/main.rs"

[dependencies]
libc = "0.2"
serde_json = "1.0"
tui = "0.18"
crossterm = "0.23"
clap = { version = "3.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.16.1", features = ["sync", "macros", "rt-multi-thread"] }

[build-dependencies]
cc = "1.0"