[package]
name = "flightctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
tonic = "0.6.2"
prost = "0.9.0"
futures = "0.3"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
mavsdk = { path = "../mavsdk" }
