[package]
name = "flightctl"
version = "0.1.0"
edition = "2021"

[lib]
name = "manager"
path = "src/manager.rs"


[[bin]]
name = "flightctl"
path = "src/main.rs"


[dependencies]
clap = { version = "3.0", features = ["derive"] }
cxx = "1.0"
futures = "0.3"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
mavsdk = { path = "../mavsdk" }